--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,6 +7,12 @@
     <%= movie.poster_url %>
     <br>
     <%= movie.rating %>
+
+    <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+    <%= link_to 'Delete Bookmark',
+        bookmark_path(bookmark),
+        data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }
+    %>
   <% end %>
 </div>
 
