--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -2,4 +2,5 @@
 <p>
   <strong>name:</strong>
   <%= list.name %>
+  <%= cl_image_tag @list.poster.key, height: 300, width: 400, crop: :fill %>
 </p>
