--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -17,5 +17,5 @@
   <% end %>
 </div>
 
-<%= link_to "Boookmark", new_list_bookmark_path(@list) %>
+<%= link_to "Add Movie", new_list_bookmark_path(@list) %>
 <%= link_to "Back", lists_path %>
