--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @list.name %></h1>
-<%= cl_image_tag @list.poster.key, height: 300, width: 400, crop: :fill %>
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 
 <div id="teams">
   <% @list.movies.each do |movie| %>
